Updated WeatherParser: Changed getData method to use HttpClient, HttpResponse Added status code checks